test/syntax/fail/attrs/test/no_polymorphic.sync
[@test]
let node f x = x
