test/syntax/fail/attrs/test/no_polymorphic.expected
File "dummy.sync", line 1, characters 3-7:
 1 | [@test]
       ^^^^

Error: The 'test' attribute cannot be applied to polymorphic nodes.
